// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IO tests IO section should match snapshot with one field 1`] = `
Object {
  "name": "someone",
}
`;

exports[`IO tests IO section should match snapshot with two fields 1`] = `
Object {
  "name": "someone",
  "password": "secret",
}
`;

exports[`IO tests IO section third level should match snapshot with three fields 1`] = `
Object {
  "data": "sample",
  "name": "someone",
  "password": "secret",
}
`;

exports[`IO tests should match snapshot with one field 1`] = `
Object {
  "name": "someone",
}
`;

exports[`IO tests should match snapshot with three fields 1`] = `
Object {
  "data": "sample",
  "name": "someone",
  "password": "secret",
}
`;

exports[`IO tests should match snapshot with two fields 1`] = `
Object {
  "name": "someone",
  "password": "secret",
}
`;
